# India-gift-store-cpp

./: CMakeLists.txt  README-Windows.md  README.md  buildapp  buildapp.bat
src/: gift_store.cpp
src/model/: gift.cpp  transaction.hpp
src/service/: gift_service.h
test/service/: gift_service_test.cpp
